Acrescentado tags dos projetos

--- a/projetos.html
+++ b/projetos.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Página dos projetos </h1>
     <a href ="index.html">Volta para página inicial</a>
+    <p>Principais projetos</p><p>projetos em andamentos</p>
 </body>
 </html>
